force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_SalesArea__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>PMC_SS_AccountSalesAreaRelationship__c</referenceTo>
    <relationshipLabel>CPQ Quote Lines</relationshipLabel>
    <relationshipName>PMC_CPQ_CPQQuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>