force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_SalesAreaBackend__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SalesAreaBackend__c</fullName>
    <formula>SBQQ__Quote__r.PMC_CPQ_SalesArea__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Area Backend</label>
    <type>Text</type>
</CustomField>