force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ShippingType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShippingType__c</fullName>
    <inlineHelpText>Classification that determines the method of Shipping used for transporting the goods.</inlineHelpText>
    <label>Shipping Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_ModeofTransportation__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>PMC_CPQ_ShippingType</valueSetName>
    </valueSet>
</CustomField>