force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ShipTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ShipTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is created  to check the shipping address value of the line item.</description>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Lines (Ship To)</relationshipLabel>
    <relationshipName>Quote_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>