force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_SoldCFR__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_SoldCFR__c</fullName>
    <label>Sold CFR (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>