force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Subtotal__c</fullName>
    <description>This field is created  to check Subtotal of line item records.</description>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>