force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ToleranceComments__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ToleranceComments__c</fullName>
    <label>Tolerance Comments</label>
    <type>TextArea</type>
</CustomField>