force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ToleranceonQuantity__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ToleranceonQuantity__c</fullName>
    <label>Tolerance on Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>