force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_TruckType__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_TruckType__c</fullName>
    <label>Truck Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>PMC_CPQ_PackType__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Graneleiro</fullName>
            </value>
            <value>
                <fullName>Caçamba</fullName>
            </value>
            <value>
                <fullName>Tanque</fullName>
            </value>
            <value>
                <fullName>Sider</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>