force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_UnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_UnitofMeasure__c</fullName>
    <label>UoM</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_UnitOfMeasure</valueSetName>
    </valueSet>
</CustomField>