force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_ValidEndDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ValidEndDate__c</fullName>
    <label>Delivery Window End Date</label>
    <type>Date</type>
</CustomField>