force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_VCOIntercompanyPlant__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VCOIntercompanyPlant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created as part of GDASF-19142. This field holds the location (via Product Location) for Intercompany VCO.</description>
    <label>VCO Intercompany Plant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.SBQQ__Product__c</field>
            <operation>equals</operation>
            <valueField>PMC_CPQ_ProductLocation__c.PMC_CPQ_ProductName__c</valueField>
        </filterItems>
        <filterItems>
            <field>PMC_CPQ_ProductLocation__c.PMC_CPQ_Location__r.RecordTypeId</field>
            <operation>equals</operation>
            <value>Origin Location</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>PMC_CPQ_ProductLocation__c</referenceTo>
    <relationshipLabel>Quote Lines (VCO Intercompany Plant)</relationshipLabel>
    <relationshipName>Intercompany_VCOPlant</relationshipName>
    <type>Lookup</type>
</CustomField>