force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_CPQ_VolumeDiscount__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_VolumeDiscount__c</fullName>
    <description>This field is created as a part of Quote Line Total Price Calculation</description>
    <label>Potash Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>