force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PMC_SS_QuantityAccountsUoM__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_QuantityAccountsUoM__c</fullName>
    <description>Field to specify quantity in account&apos;s UOM</description>
    <label>Quantity (Account’s UoM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>