force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quantity_Check__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Check__c</fullName>
    <formula>IF( AND(SBQQ__Quote__r.PMC_CPQ_QuoteApproved__c, SBQQ__Quantity__c &lt; ROUND(PMC_CPQ_OriginalQuantity__c * PMC_CPQ_PercentageOfQuantity__c ,0)) ,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity Check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>