force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <description>This field captures the record type for the quote line</description>
    <inlineHelpText>This field captures the record type for the quote line</inlineHelpText>
    <label>Record Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commerce</fullName>
            </value>
            <value>
                <fullName>Co-Products</fullName>
            </value>
            <value>
                <fullName>Feed</fullName>
            </value>
            <value>
                <fullName>Fertilizer</fullName>
            </value>
            <value>
                <fullName>FPD</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Non FPD</fullName>
            </value>
            <value>
                <fullName>Raw Materials</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>