force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__PricingMethod__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__PricingMethod__c</fullName>
    <description>Determines how the price for this line item is set. &quot;List&quot; = calculated by subtracting discount from list price. &quot;Cost&quot;  = calculated by adding markup to cost.</description>
    <inlineHelpText>Indicates how the price for this line item is calculated. &quot;List&quot; = subtracting discount from list price. &quot;Cost&quot; = adding markup to cost.</inlineHelpText>
    <label>Pricing Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Block</fullName>
            </value>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>List</fullName>
                <default>true</default>
                <label>List</label>
            </value>
            <value>
                <fullName>Percent Of Total</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>