force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/PMC_CPQ_DomesticBR.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_DomesticBR</fullName>
    <active>true</active>
    <label>Domestic SA</label>
</RecordType>