force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/PMC_CPQ_DomesticNA.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_DomesticNA</fullName>
    <active>true</active>
    <label>Domestic NA</label>
</RecordType>