force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/PMC_CPQ_International.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_International</fullName>
    <active>true</active>
    <label>International</label>
</RecordType>