force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/PMC_CPQ_InternationalDistribution.recordType-meta.xml
<RecordType>
    <fullName>PMC_CPQ_InternationalDistribution</fullName>
    <active>true</active>
    <label>International Distribution</label>
</RecordType>