force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/Negative_Price_Adjustment_For_List_Class.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_Price_Adjustment_For_List_Class</fullName>
    <active>true</active>
    <description>Validates that the price adjustment is negative for a quote classification equals to List.</description>
    <errorConditionFormula>ISPICKVAL(SBQQ__Quote__r.PMC_CPQ_QuoteClassification__c , &apos;List&apos;) &amp;&amp;  PMC_CPQ_Discount__c &lt; 0</errorConditionFormula>
    <errorMessage>Price adjustment cannot be negative for quote classification equals to List.</errorMessage>
</ValidationRule>