force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/PMC_CPQ_CommissionandCommissonAgent.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_CommissionandCommissonAgent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(PMC_CPQ_QuoteRegionExtractor__c=&apos;North America&apos;),
NOT(ISCHANGED( PMC_CPQ_FlowVRBypassToggle__c )),
ISBLANK( PMC_CPQ_Commission__c ),
NOT(ISBLANK(  SBQQ__Quote__r.PMC_CPQ_CommissionAgent__c )),
NOT(ISNEW())
)</errorConditionFormula>
    <errorMessage>Please make sure the Commission value is set for all the line items, as Commission Agent is set at Quote</errorMessage>
</ValidationRule>