force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/PMC_CPQ_NonVCOQuoteShipTo.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_NonVCOQuoteShipTo</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
OR(
ISBLANK(PMC_CPQ_OpportunityLineItemId__c ),
AND(NOT(ISBLANK(PMC_CPQ_OpportunityLineItemId__c )),NOT(ISNEW()))
),
NOT(PMC_CPQ_VCOQuotation__c) ,
NOT(PMC_CPQ_QuoteRegionExtractor__c=&apos;North America&apos;),
NOT(ISCHANGED( PMC_CPQ_FlowVRBypassToggle__c )),
ISBLANK( PMC_CPQ_SoldToShipToJunction__c )
)</errorConditionFormula>
    <errorMessage>Please kindly populate the Ship To field for the Non VCO Quote Lines</errorMessage>
</ValidationRule>