force-app/main/default/objects/SBQQ__QuoteLine__c/validationRules/PMC_CPQ_PackageTypeMandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_CPQ_PackageTypeMandatory</fullName>
    <active>true</active>
    <description>Package Type on Quote Line is mandatory if Pack type is choose as Packed for brazil</description>
    <errorConditionFormula>AND(
NOT($Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;API Only profile&apos;,
NOT(CONTAINS($Profile.Name, &apos;Digital Hub&apos;)),
ISPICKVAL( PMC_CPQ_PackType__c , &apos;Packed&apos;),  
ISPICKVAL(PMC_CPQ_PackageType__c,&quot;&quot;),
OR(
ISBLANK(PMC_CPQ_OpportunityLineItemId__c ),
AND(NOT(ISBLANK(PMC_CPQ_OpportunityLineItemId__c )),NOT(ISNEW()))),
ISPICKVAL( SBQQ__Quote__r.PMC_CPQ_Region__c ,&quot;Brazil&quot;),
NOT(ISCHANGED( PMC_CPQ_FlowVRBypassToggle__c ))
)</errorConditionFormula>
    <errorMessage>Packaging type is mandatory for Pack type of Packed</errorMessage>
</ValidationRule>